yml 파일에 branches: fe 추가

--- a/.github/workflows/fe-deploy.yml
+++ b/.github/workflows/fe-deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     paths:
       - "frontend-3rd-loan/**"
+    branches:
+      - "fe"
+      # TODO: 최종에서는 fe -> main으로 바꾸기
 
 jobs:
   deploy:
