--- a/.github/workflows/fe-deploy.yml
+++ b/.github/workflows/fe-deploy.yml
@@ -24,19 +24,22 @@ jobs:
       - name: Log in to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Pull and deploy frontend Docker image
+      # docker hub push
+      - name: Push fromtend Docker image
         run: |
           cd frontend-3rd-loan
-          docker pull seonmin5/action-fe:1.0
+          docker push seonmin5/action-fe:1.0
 
-      - name: SSH and deploy to EC2
-        uses: appleboy/ssh-action@v0.1.4
+      # EC2 Server connection & docker deploy
+      - name: EC2 Docker deploy
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_IP }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
           script: |
-            docker stop action-fe || true
-            docker rm action-fe || true
-            docker run -d -p 80:3000 --name action-fe seonmin5/action-fe:1.0
+            sudo docker stop $(docker ps -qa)
+            sudo docker rm -f $(docker ps -qa)
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0
+            sudo docker run -d -p 80:3000 --name action-fe seonmin5/action-fe:1.0
