--- a/.github/workflows/fe-deploy.yml
+++ b/.github/workflows/fe-deploy.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Push fromtend Docker image
         run: |
           cd frontend-3rd-loan
+          docker build -t action-fe:1.0 .
           docker push seonmin5/action-fe:1.0
 
       # EC2 Server connection & docker deploy
@@ -37,9 +38,15 @@ jobs:
           host: ${{ secrets.EC2_IP }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
+
+          # Stop and remove only the relevant container
+          # Remove old image
+          # Pull new image and run
           script: |
-            sudo docker stop $(docker ps -qa)
-            sudo docker rm -f $(docker ps -qa)
-            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0
+            sudo docker stop action-fe || true
+            sudo docker rm action-fe || true
+
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0 || true
+
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0
             sudo docker run -d -p 80:3000 --name action-fe seonmin5/action-fe:1.0
