--- a/.github/workflows/fe-deploy.yml
+++ b/.github/workflows/fe-deploy.yml
@@ -26,10 +26,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # docker hub push
-      - name: Push fromtend Docker image
+      - name: Push frontend Docker image
         run: |
           cd frontend-3rd-loan
-          docker build -t action-fe:1.0 .
+          docker build -t seonmin5/action-fe:1.0 .
           docker push seonmin5/action-fe:1.0
 
       # EC2 Server connection & docker deploy
