--- a/.github/workflows/fe-deploy.yml
+++ b/.github/workflows/fe-deploy.yml
@@ -47,7 +47,7 @@ jobs:
             sudo docker stop action-fe || true
             sudo docker rm action-fe || true
 
-            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0 || true
+            sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0 || true
 
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/action-fe:1.0
             sudo docker run -d -p 80:3000 --name action-fe seonmin5/action-fe:1.0
