--- a/.github/workflows/be-deploy.yml
+++ b/.github/workflows/be-deploy.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - "backend-2nd-loan-dev/**"
     branches:
-      - "be"
+      - "main"
       # TODO: 최종에서는 fe -> main으로 바꾸기
 
 jobs:
