--- a/backend-2nd-loan-dev/loan/Dockerfile
+++ b/backend-2nd-loan-dev/loan/Dockerfile
@@ -10,14 +10,20 @@ COPY gradlew .
 COPY gradle gradle
 COPY build.gradle .
 COPY settings.gradle .
+
+# 의존성만 먼저 다운로드하여 캐시 레이어 활용
+RUN chmod +x gradlew
+
+# RUN
+RUN ./gradlew dependencies --no-daemon
+
 COPY src src
 
 # 빌드 수행
-RUN chmod +x gradlew
-RUN ./gradlew build -x test
+RUN ./gradlew build -x test --no-daemon
 
 # Application 실행에 관련된 스크립트 --------------------------------
-FROM openjdk:17-jdk-slim
+FROM openjdk:17-jdk-alpine
 
 WORKDIR /app
 
